// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create profile 1`] = `
Array [
  Object {
    "bio": null,
    "created_at": "[DATE]",
    "created_by": "[peoplestamp]",
    "desired": null,
    "first_name": null,
    "id": "[ID]",
    "last_name": null,
    "profile_picture": Object {
      "mime": "image/jpg",
      "url": "http://apicture.jpg",
    },
    "tags": null,
    "updated_at": "[DATE]",
    "updated_by": "[peoplestamp]",
    "user_id": "[ID]",
  },
]
`;

exports[`create settings 1`] = `
Array [
  Object {
    "created_at": "[DATE]",
    "created_by": "[peoplestamp]",
    "id": "[ID]",
    "location": null,
    "search_radius": null,
    "updated_at": "[DATE]",
    "updated_by": "[peoplestamp]",
    "user_id": "[ID]",
    "zip": null,
  },
]
`;

exports[`current user 1`] = `
Array [
  Object {
    "id": "[ID]",
    "type": 0,
  },
]
`;

exports[`get settings 1`] = `
Array [
  Object {
    "created_at": "[DATE]",
    "created_by": "[peoplestamp]",
    "id": "[ID]",
    "location": "0101000020E6100000355EBA490C9E5D40AE47E17A14FE4040",
    "search_radius": null,
    "updated_at": "[DATE]",
    "updated_by": "[peoplestamp]",
    "user_id": "[ID]",
    "zip": null,
  },
]
`;

exports[`profile visible by other users 1`] = `
Array [
  Object {
    "bio": null,
    "created_at": "[DATE]",
    "created_by": "[peoplestamp]",
    "desired": null,
    "first_name": null,
    "id": "[ID]",
    "last_name": null,
    "profile_picture": Object {
      "mime": "image/jpg",
      "url": "http://apicture.jpg",
    },
    "tags": null,
    "updated_at": "[DATE]",
    "updated_by": "[peoplestamp]",
    "user_id": "[ID]",
  },
]
`;

exports[`set lat/lng 1`] = `
Object {
  "created_at": "[DATE]",
  "created_by": "[peoplestamp]",
  "id": "[ID]",
  "location": "0101000020E6100000355EBA490C9E5D40AE47E17A14FE4040",
  "search_radius": null,
  "updated_at": "[DATE]",
  "updated_by": "[peoplestamp]",
  "user_id": "[ID]",
  "zip": null,
}
`;
